[package]
name = "docker-shell"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror"] }

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
bollard = "0.15"
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"
sha2 = "0.10"
base64 = "0.22"